{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 22,
  "lineage": "54d07370-6abb-aaad-69fc-09e9d1ac5e3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tsp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752609092:internet-gateway/igw-014182b5b2e634583",
            "id": "igw-014182b5b2e634583",
            "owner_id": "050752609092",
            "tags": {
              "Name": "tsp-vpc"
            },
            "tags_all": {
              "Name": "tsp-vpc"
            },
            "vpc_id": "vpc-023a19b83500bd2e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tsp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tsp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752609092:route-table/rtb-0cdd706ac92254e79",
            "id": "rtb-0cdd706ac92254e79",
            "owner_id": "050752609092",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014182b5b2e634583",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-023a19b83500bd2e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tsp-vpc",
            "aws_vpc.tsp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tsp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01847a766dc1ddd52",
            "route_table_id": "rtb-0cdd706ac92254e79",
            "subnet_id": "subnet-0f44f959784f56786"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tsp-vpc",
            "aws_route_table.tsp-vpc",
            "aws_subnet.tsp-vpc",
            "aws_vpc.tsp-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a51e6e31e143f2e5",
            "route_table_id": "rtb-0cdd706ac92254e79",
            "subnet_id": "subnet-046718adfb184162a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.tsp-vpc",
            "aws_route_table.tsp-vpc",
            "aws_subnet.tsp-vpc",
            "aws_vpc.tsp-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tsp-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752609092:security-group/sg-0a4fb24aca5513ff1",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4fb24aca5513ff1",
            "ingress": [],
            "name": "tsp-cluster-sg",
            "name_prefix": "",
            "owner_id": "050752609092",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tsp-cluster"
            },
            "tags_all": {
              "Name": "tsp-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-023a19b83500bd2e3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tsp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tsp-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "15.222.12.240/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1100794906",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a4fb24aca5513ff1",
            "security_group_rule_id": "sgr-04468a3e6ccac2de7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.tsp-cluster",
            "aws_vpc.tsp-vpc",
            "data.http.workstation-external-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tsp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752609092:subnet/subnet-0f44f959784f56786",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44f959784f56786",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050752609092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tsp-eks-node",
              "kubernetes.io/cluster/tsp-cluster": "shared"
            },
            "tags_all": {
              "Name": "tsp-eks-node",
              "kubernetes.io/cluster/tsp-cluster": "shared"
            },
            "vpc_id": "vpc-023a19b83500bd2e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tsp-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752609092:subnet/subnet-046718adfb184162a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046718adfb184162a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "050752609092",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tsp-eks-node",
              "kubernetes.io/cluster/tsp-cluster": "shared"
            },
            "tags_all": {
              "Name": "tsp-eks-node",
              "kubernetes.io/cluster/tsp-cluster": "shared"
            },
            "vpc_id": "vpc-023a19b83500bd2e3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.tsp-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tsp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:050752609092:vpc/vpc-023a19b83500bd2e3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03b55c2f00e70e48a",
            "default_route_table_id": "rtb-038654724c80b5455",
            "default_security_group_id": "sg-014e33ef7b4e39fe6",
            "dhcp_options_id": "dopt-0ad1fa413ba44bc18",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023a19b83500bd2e3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-038654724c80b5455",
            "owner_id": "050752609092",
            "tags": {
              "Name": "tsp-eks-node",
              "kubernetes.io/cluster/tsp-cluster": "shared"
            },
            "tags_all": {
              "Name": "tsp-eks-node",
              "kubernetes.io/cluster/tsp-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}